Fixed alignment in bet results page

--- a/src/components/BetDetailsModal/components/BetResultsPage/BetResultsPage.module.scss
+++ b/src/components/BetDetailsModal/components/BetResultsPage/BetResultsPage.module.scss
@@ -55,3 +55,11 @@
 .empty {
   height: 316px;
 }
+
+.value {
+  justify-content: flex-end;
+
+  @include media-breakpoint-up(md) {
+    justify-content: flex-start;
+  }
+}
